public/assets/web/css/admin.css
/* ... */
@media(max-width: 580px) {
  .notifaction_sec .dropdown-menu {
    max-width: 100%;
    transform: translateX(-50%);
    right: auto;
    left: 50%;
    width: 100%;
    border-radius: 0;
    box-shadow: none;
    top: 64px;
    height: 100%;
    padding-bottom: 65px;
  }

  .top_menu .list-group a span svg {
    width: 25px;
  }

  /* .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8 {
    padding-right: 15px !important;
  } */

  .new_dev_delivery .wd-quote-box {
    padding: 30px 20px;
  }

  .new_dev_delivery .new_sec_delivr {
    margin-right: 0 !important;
  }


  /* .chat_conversation {
    height: auto !important;
  } */


  .bidding_new_design {
    display: flex;
    flex-wrap: wrap;
    row-gap: 0;
    justify-content: space-between;
    padding: 0 10px 5px;
    margin-top: 15px;
  }

  .bidding_new_design_grid {
    width: 47%;
  }

  .bidding_new_design_grid span {
    font-size: 12px;
    color: #000000ba;
  }

  .bidding_new_design_grid span.sub_color {
    color: #0356D6;
  }

  .bidding_new_design_grid.job_new_grid_lowest span.sub_color {
    color: #52D017;
  }

  .bidding_new_design_date.job_new_grid_date span {
    font-size: 12px;
    color: #000000ba;
  }

  .bidding_new_design_date.job_new_grid_date {
    padding-left: 10px;
  }

  .new_message_section .chat_box .scrollbar,
  .msg_active_container .chat_box .scrollbar {
    /* height: auto;
    max-height: calc(100vh - 280px); */
    height: calc(100vh - 265px);
    /* max-height: calc(100% - 213px);
    padding-bottom: 0; */
  }

  .chat_head_lft {
    align-items: center;
  }

  .active_chat_title+.chat_box {
    box-shadow: none;
    transition: none !important;
  }

  #messages .active-job-box {
    height: calc(100svh - 65px);
    padding-bottom: 0;
  }

  /* section.wd-active-job.new_message_section {
    height: calc(100vh - 140px);
    overflow: auto;
  } */

  ul.menu .noti_info_icon {
    margin-right: 0;
  }

  .chat_conversation_footer .form-group .form-control {
    line-height: normal;
    /* padding-top: 18px; */
    height: 40px;
    padding-top: 10px;
    padding-bottom: 0;
    padding-left: 8px;
    padding-right: 8px;
  }

  .list_detail p b {
    white-space: normal;
  }

  .quote_grp_btns {
    padding: 15px 0;
  }

  .msg-send_flex a#send_message {
    padding-right: 8px;
  }

  .list-group-item.active,
  .list-group-item:hover,
  #sidebar-wrapper .list-group a span {
    transition: none !important;
  }


  body.message-color .new_message_section .active-job-box {
    background: transparent;
  }

  body.message-color section.wd-active-job.new_message_section {
    background: #f3f3f3;
    overflow: unset;
  }

  body.message-color .chat_title_bx {
    background: #fff;
    margin: 0 !important;
    padding: 47px 0 35px;
  }

  body.message-color {
    background: #f3f3f3;
  }

  body.message-color .message_container {
    padding: 65px 0 0;
  }

  .lve_rate .starrating {
    padding-right: 45px;
  }

  .bidding_new_design_date.job_new_grid_date {
    padding-top: 0;
  }

  body.notification-scroll {
    padding-right: 0;
  }

  .active_job_mobile .job-listing .bidding_new_design {
    justify-content: space-between;
  }

  .active_job_mobile .job-listing .bidding_new_design .bidding_new_design_grid {
    padding-right: 0;
  }




  .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8.accepted_quotes_row {
    /* padding-right: 0 !important; */
    margin: 0 !important;
    /* padding-left: 20px !important; */
  }

  /* .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8.accepted_quotes_row .new_sec_delivr {
    margin-right: -4px !important;
  } */

  .new_dev_delivery .accepted_quotes_row .wd-quote-box {
    width: 95%;
  }

  .new_dev_delivery .accepted_quotes_row .wd-quote-box.accepted_quotes_new {
    width: 100%;
    margin-bottom: 50px;
    /* border-top-right-radius: 0;
    border-bottom-right-radius: 0; */
  }
}

@media (max-width: 400px) {
  .chat_box .scrollbar {
    height: auto;
  }

}

@media(min-width: 1200px) {
  .container-job .chat_box,
  .message_container .chat_box {
    height:calc(100% - 85px);
    overflow: hidden;
  }
  /* .wd-active-job.new_message_section .chat_box {
    height: calc(100% - 85px);
  } */
  .wd-active-job.new_message_section .chat_box .chat_conversation {height:100%;}
}
@media (max-width: 767px) {
  .foot_img {
      text-align: left;
      margin: 0 0 30px;
  }
}

